k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    api.service: api
spec:
  replicas: 1
  selector:
    matchLables:
      api.service: api
  template:
    metadata:
      labels:
        api.service: api
    spec:
      containers:
        - args:
          - ./start.sh
          image: andersstendevad/minitwit_api:latest
      restartPolicy: Always
