k8s/api.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    api.service: api
  name: api
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    api.service: api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    api.service: api
spec:
  replicas: 1
  selector:
    matchLabels:
      api.service: api
  template:
    metadata:
      labels:
        api.service: api
    spec:
      containers:
        - args:
          - ./start.sh
          image: andersstendevad/minitwit_api:latest
          name: api
      restartPolicy: Always
