k8s/loki.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki-grafana-loadbalancer
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
    service.beta.kubernetes.io/do-loadbalancer-size-slug: "lb-small"
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/instance: loki
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
